src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dhU-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault window height: U\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 599 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 599 × 680, bounds: 1231 × 680, states: []
size: 599 × 680, bounds: 1231 × 680, states: [Activated]
